--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.6",
     "framer-motion": "^12.4.7",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "sass": "^1.85.0",
     "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.6",
-    "three": "^0.173.0"
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
